# forest_fires

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
notebooks/: ast_lora_training.ipynb  ast_mlp.ipynb  vit_finetune.ipynb
src/forest_fires/: __init__.py  main.py  melspectogram_finetune.ipynb
src/forest_fires/data_preprocessing/: __init__.py  ast_lora_datamodule.py  data_acquisition.py  data_downloader.py  datamodule.py  feature_extractor_ast.py  kaggle_data_acquisition.py
src/forest_fires/model_evaluation/: evaluate_ast_mlp.py
src/forest_fires/models/: ast_lora.py  finetune_ast_lora.py  mlp_classifier.py
src/forest_fires/utils/: __init__.py  collate_fn.py  log.py
tests/: __init__.py
