[project]
name = "forest_fires"
version = "0.1.0"
description = "ML project forest_fires"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "kagglehub>=0.3.13",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "D", "ANN", "C90"]  # docstrings, type hints, complexity
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "safety>=3.6.1",
    "types-torch>=0.1.1",
]
